parser/src/test/resources/corpus/invalid/16_description_no_string.ff
rule "Description No String" {
  description: 42
}
